tests/baselines/reference/declarationEmitInferredTypeAlias2.errors.txt
1.ts(1,9): error TS2869: Truthiness test of this kind of expression appears unintentional


==== 0.ts (0 errors) ====
    {
        type Data = string | boolean;
        let obj: Data = true;
    }
    export { }
    
==== 1.ts (1 errors) ====
    let v = "str" || true;
            ~~~~~
!!! error TS2869: Truthiness test of this kind of expression appears unintentional
    function bar () {
        return v;
    }
    export { v, bar }